<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context="com.example.eComerceClone.LoginActivity">

    <ImageView
        android:id="@+id/login_appLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"/>
    <EditText
        android:id="@+id/login_phone_number_imput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_appLogo"
        android:background="@drawable/imput_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:hint="@string/phone_number"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="number"
        android:textSize="17sp"
        android:textStyle="bold"

        tools:ignore="TextFields" />
    <EditText
        android:id="@+id/login_phone_password_imput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number_imput"
        android:background="@drawable/imput_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:layout_marginTop="6dp"
        android:textSize="17sp"
        android:textStyle="bold"
        tools:ignore="TextFields" />
    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_phone_password_imput"
        android:layout_marginTop="5dp"
        >
        <CheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="@string/remenber_me"
            android:textColor="@color/colorPrimaryDark"
            app:cbd_strokeColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="17sp"
            />

        <TextView
            android:id="@+id/forgot_password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginStart="100dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        android:textColor="@android:color/white"


        />

    <TextView
        android:id="@+id/not_admim_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_not_admin"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_btn"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="25dp"
        android:visibility="invisible"

        />

</RelativeLayout>